--- a/DeepLearning_updated/EO-Lab_Pytorch_script_example.ipynb
+++ b/DeepLearning_updated/EO-Lab_Pytorch_script_example.ipynb
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import Training Image"
+    "## Data: Import Training Image"
    ]
   },
   {
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import Labels"
+    "## Data: Import Labels"
    ]
   },
   {
@@ -148,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Array partitioning for train test sample chips\n",
+    "## Data: Array partitioning for train test sample chips\n",
     "###### custom function is required to partition array or samples in pytorch environemnet"
    ]
   },
@@ -201,7 +201,7 @@
     "tags": []
    },
    "source": [
-    "# Prepare pytorch data loader\n",
+    "# Data: Prepare pytorch data loader\n",
     "for smooth training, data flow and memory usage, pytorch has dataset and dataloader class which is designed to be customized as our data structure and training procedure, example below is thecustomdataset class amended to take data from image and labels of which are torch tensors"
    ]
   },
@@ -240,7 +240,7 @@
     "id": "CwE6GZlaqDtd"
    },
    "source": [
-    "# Prepare FCN_ResNet Model\n",
+    "# Model: Prepare FCN_ResNet Model\n",
     "###### see https://pytorch.org/vision/0.11/models.html for further notes"
    ]
   },
