--- a/DeepLearning_updated/EO-Lab_Pytorch_script_example.ipynb
+++ b/DeepLearning_updated/EO-Lab_Pytorch_script_example.ipynb
@@ -6,7 +6,7 @@
     "id": "NZ6TXg8HqDtX"
    },
    "source": [
-    "# Setup: Importing Necesary libraries\n",
+    "# Setup: Importing Necessary Libraries\n",
     "#### Assuming libraries like torch, torchvision, torchmetrics, numpy and rasterio are installed in the environment"
    ]
   },
